  these are currently not supported due to limitations in the
  BatchJobs package.
o WORKAROUND: Global variables with names starting with a period
  ort that does not match pattern '[a-zA-Z0-9._-]+' could not be
  exported due to BatchJobs limitation.  Until resolved by BatchJobs,
  this package encode and decode such variable names automatically.
o ROBUSTNESS: Package test coverage is 88%.


Version: 0.5.2 [2015-07-30]
o CLEANUP: Dropped %backend% - use %plan% backend(...) instead.
o BUG FIX: batchjobs(..., backend="interactive") changed
  also the default backend.


Version: 0.5.1 [2015-07-29]
o Adjusted to future (>= 0.7.0).
o CLEANUP: Dropped functions and tests that are now in the
  future package.


Version: 0.5.0 [2015-06-19]
o Adjusted to future (>= 0.5.1).


Version: 0.4.2 [2015-06-14]
o Added demo("mandelbrot", package="async").
o Added run() for BatchJobsAsyncTask.
o CLEANUP: BatchJobsAsyncTask no longer registers/submits jobs.
o CLEANUP: Dropped asyncEvalQ().
o CLEANUP: Dropped async() - now batchjobs().
o CLEANUP: Dropped makeClusterFunctionsRscript().
o CLEANUP: Dropped delayed assignment %<-% infix operator.


Version: 0.4.1 [2015-06-14]
o Add batchjobs() allowing for plan(batchjobs, backend="multicore").
o BatchJobsAsyncTask() and internal tempRegistry() gained
  argument 'backend'.


Version: 0.4.0 [2015-06-08]
o CLEANUP: Extract Future API and moved to new package 'future'.
o Now delayedAsyncAssign() returns a Future.
o BUG FIX: The existance of .BatchJobs.R would override
  whatever backend was already set by backend().
o BUG FIX: Asynchroneous evaluation of { a <<- 1 } no longer
  identifies 'a' as a global variable that needs to be exported.


Version: 0.3.1 [2015-05-23]
o CLEANUP: Moved more internal code to the 'listenv' package.


Version: 0.3.0 [2015-05-21]
o Now inspect(envir=x) returns all tasks if only the environment
  is specified, e.g. inspect(envir=x) vs inspect(x$a).
o Added completed() and failed(), expired().