@@ -19,6 +19,7 @@ S3method(getMessage,AsyncTaskError)
 S3method(print,AsyncListEnv)
 S3method(print,AsyncTask)
 S3method(print,BatchJobsAsyncTask)
+S3method(resolved,AsyncTask)
 S3method(run,AsyncTask)
 S3method(run,BatchJobsAsyncTask)
 S3method(status,AsyncListEnv)
@@ -64,6 +65,7 @@ importFrom(R.utils,tempvar)
 importFrom(future,Future)
 importFrom(future,availableCores)
 importFrom(future,futureOf)
+importFrom(future,resolved)
 importFrom(future,value)
 importFrom(globals,as.Globals)
 importFrom(globals,cleanup)
